added notifications when new products are added this also notifies for new products when modifying or deleting products but we dont mind currently. new service class to listen on messages from firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="title_activity_add_product">AddProduct</string>
+    <string name="channel_name">main_channel</string>
+    <string name="channel_description">new products channel notifications</string>
 </resources>
