completed the login part , added the no need for re login after the first time

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_add_product">AddProduct</string>
     <string name="channel_name">main_channel</string>
     <string name="channel_description">new products channel notifications</string>
+    <string name="logged"></string>
 </resources>
